# tllama

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: api.rs  chat.rs  cli.rs  discover.rs  env.rs  lib.rs  main.rs  rpc.rs
src/api/: mod.rs  openai.rs  pool.rs  rllama_api.rs  server.rs  tlama_api.rs  tllama_api.rs
src/assets/: daemon.py  hf_daemon.py
src/engine/: adapter.rs  hf.rs  llama_cpp.rs  mod.rs
src/template/: adapter.rs  golang.rs  gtmpl.rs  jinja.rs  mod.rs
