[package]
name = "rllama"
version = "0.1.0"
edition = "2024"

[lib]
name = "rllama"
path = "src/lib.rs"

[features]
default = ["tpl-gotpl", "engine-llama-cpp", "chat", "api"]
tpl-gotpl = ["gotpl"]
tpl-minijinja = ["minijinja"]
hw-native = ["llama-cpp-2/native"]
hw-cuda = ["llama-cpp-2/cuda"]
hw-metal = ["llama-cpp-2/metal"]
hw-vulkan = ["llama-cpp-2/vulkan"]
engine-llama-cpp = ["llama-cpp-2"]
engine-hf = ["pyo3"]
chat = ["rustyline", "colored", "ctrlc"]
api = ["actix-web"]

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
gotpl = { version = "0.2.3", optional = true }
lazy_static = "1.5.0"
llama-cpp-2 = { version = "0.1.121", default-features = false, features = [
    "openmp",
], optional = true }
minijinja = { version = "0.22.0", optional = true }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
pyo3 = { version = "0.26.0", optional = true }
dirs = "6.0.0"
walkdir = "2.5.0"
rustyline = { version = "17.0.1", optional = true }
colored = { version = "3.0.0", optional = true }
ctrlc = { version = "3.5.0", features = ["termination"], optional = true }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
actix-web = { version = "4.11.0", optional = true }